--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 </head>
 <body>
-    <hr>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="www.sliet.ac.in">Home</a>
@@ -60,14 +59,18 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            <ul class="d-flex">
+                            <div class="p-1">
+                                <button class="btn btn-outline-success" type="submit">Cart</button>
+                            </div>
+                            <div class="p-1">
+                                <button class="btn btn-outline-success" type="submit">Log In</button>
+                            </div>
+                        </ul>
           </div>
         </div>
       </nav>
-      <hr>
+    
     
 </body>
 </html>
